# efficient-codegen-slr-replication

./: LICENSE  README.md  TAXONOMY.md
data/: classification-scheme.csv  primary-studies.csv  reporting-compliance.json  statistics.json
data/by-rq/: rq1-studies.csv  rq2-studies.csv  rq3-studies.csv  rq4-studies.csv
docs/: REQUIREMENTS.md  index.html
experiments/: EXPERIMENT-PLAN.md  pyproject.toml  run.sh  run_all.sh
experiments/scripts/: download_models.py  eval_humaneval.py  fix_tokenizer.py  launch-energy-round.sh  launch-pareto-parallel.sh  launch_energy_mopup.sh  plot_pareto_2x2.py  plot_results.py  run_composition.py  run_energy_round.py  run_pareto.py
scripts/: generate-data.py
