[project]
name = "efficient-codegen-exp"
version = "0.1.0"
description = "Efficient CodeGen Survey experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "auto-gptq>=0.7.1",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "huggingface-hub>=1.10.2",
    "matplotlib>=3.10.8",
    "modelscope>=1.35.4",
    "numpy>=2.2.6",
    "optimum>=2.1.0",
    "pandas>=2.3.3",
    "peft>=0.19.0",
    "scipy>=1.15.3",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "transformers>=5.5.4",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
